# TriangleCentrality-in-GraphBLAS

./: CMakeLists.txt  README.md
graphs/: testgraph.txt
include/: utils.h
src/: main.c  triangleCentrality.c
